--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -1,9 +1,8 @@
 name: 🚜 B&D Front End
-run-name: 🚜 Building and Deploying Front End to ${{ github.ref_name == 'main' && 'Production' || 'Staging' }}
+run-name: "🚜 B&D ${{ github.event_name == 'pull_request' && format('{0}: {1} to ', github.event.pull_request.number, github.event.pull_request.title) || format('latest `{0}` to ', github.ref_name) }} ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}"
 
 on:
   workflow_dispatch:
-    branches: [main, develop]
   pull_request:
     paths:
       - "front/**"
@@ -48,7 +47,8 @@ jobs:
           echo '## Run Details' >> $GITHUB_STEP_SUMMARY
           echo '- Branch: [${{ env.BRANCH_NAME }}](https://github.com/dgrebb/dgrebb.com/tree/${{ env.BRANCH_NAME }})' >> $GITHUB_STEP_SUMMARY
           if [ "${{ github.event_name }}" = "pull_request" ]; then 
-            echo '- Pull Request: [#${{ github.event.number }}](https://github.com/dgrebb/dgrebb.com/pull/${{ github.event.number }})' >> $GITHUB_STEP_SUMMARY
+            echo '- Pull Request: [#${{ github.event.number }}](https://github.com/dgrebb/dgrebb.com/pull/${{ github.event.number }}) ${{ github.event.pull_request.title }}' >> $GITHUB_STEP_SUMMARY
+            echo '- ${{ github.event.pull_request.changed_files }} Files Changed: [ ${{ github.event.pull_request.commits }} Commits](${{ github.event.pull_request.commits_url }}) | [Diff](${{ github.event.pull_request.diff_url }})' >> $GITHUB_STEP_SUMMARY
           fi
           echo '## Release Details' >> $GITHUB_STEP_SUMMARY
           echo '- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})' >> $GITHUB_STEP_SUMMARY
@@ -63,10 +63,9 @@ jobs:
       name: ${{ github.ref_name == 'main' && 'prd' || 'stg' }}
 
     env:
-      DEPLOY_ENV: '${{ vars.ENV_NAME }}'
+      DEPLOY_ENV: "${{ vars.ENV_NAME }}"
 
     steps:
-
       - name: 𐂷 Checkout
         uses: actions/checkout@v3
         with:
