--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -31,7 +31,7 @@ jobs:
       GH_TOKEN: ${{ github.token }}
 
     steps:
-      - name: Create Check Run
+      - name: 🏃 Create Check Run
         # https://www.kenmuse.com/blog/creating-github-checks/
         run: |
           gh api -X POST -H "Accept: application/vnd.github+json" \
@@ -44,7 +44,7 @@ jobs:
                 "status": "queued",
                 "output": {
                     "title": "Starting Visual Regression",
-                    "summary": "Here's where we'll list the failed tests."
+                    "summary": "Heating up some ramen."
                 }
               }
           EOF
@@ -78,8 +78,7 @@ jobs:
                 "head_sha": "${{ github.event.pull_request.head.sha }}",
                 "status": "in_progress",
                 "output": {
-                    "title": "Running Visual Regression 🪤",
-                    "summary": "Here's where we'll list the failed tests."
+                    "title": "Running Visual Regression 🪤"
                 }
               }
           EOF
