--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -14,6 +14,9 @@ jobs:
   visual_regression:
     name: 🙈 BackstopJS
     runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      contents: write
 
     concurrency:
       group: tests
@@ -34,7 +37,7 @@ jobs:
       - name: 🏃 Create Check Run
         # https://www.kenmuse.com/blog/creating-github-checks/
         run: |
-          gh api -X POST -H "Accept: application/vnd.github+json" \
+          CHECKID=$(gh api -X POST -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${{ github.repository }}/check-runs
             --input - <<- EOF
@@ -48,6 +51,8 @@ jobs:
                 }
               }
           EOF
+          --jq '.id')
+          echo "checkId=$CHECKID" >> $GITHUB_OUTPUT
 
       - name: 𐂷 Checkout
         uses: actions/checkout@v3
@@ -70,7 +75,7 @@ jobs:
       - name: Start Check
         # https://www.kenmuse.com/blog/creating-github-checks/
         run: |
-          gh api -X POST -H "Accept: application/vnd.github+json" \
+          gh api -X PATCH -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${{ github.repository }}/check-runs
             --input - <<- EOF
@@ -93,7 +98,7 @@ jobs:
         run: |
           gh api -X POST -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository }}/check-runs
+            /repos/${{ github.repository }}/check-runs/${{ github.event.client_payload.checkRunId }} \
             --input - <<- EOF
               {
                 "name: "BackstopJS",
