--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -1,4 +1,5 @@
 name: 🧪 Test Front End
+run-name: "🔬 Run Tests on ${{ github.event_name == 'pull_request' && format('{0}: {1} on ', github.event.pull_request.number, github.event.pull_request.title) || format('latest `{0}` in ', github.ref_name) }} ${{ github.ref_name == 'main' && 'PRD' || 'STG' }}"
 
 on:
   workflow_dispatch:
@@ -35,23 +36,19 @@ jobs:
 
     steps:
       - name: 🏃 Create Check Run
+        id: checkrun
         # https://www.kenmuse.com/blog/creating-github-checks/
         run: |
           CHECKID=$(gh api -X POST -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository }}/check-runs
-            --input - <<- EOF
-              {
-                "name: "BackstopJS",
-                "head_sha": "${{ github.event.pull_request.head.sha }}",
-                "status": "queued",
-                "output": {
-                    "title": "Starting Visual Regression",
-                    "summary": "Heating up some ramen."
-                }
-              }
-          EOF
-          --jq '.id')
+            -f name='Running Visual Regression 🪤' \
+            -f head_sha='${{ github.event.pull_request.head.sha }}' \
+            -f status='queued' \
+            -f 'output[title]=Starting Visual Regression' \
+            -f 'output[summary]=Heating up some ramen.' \
+            -f 'output[text]=More detailed Markdown **text**' \
+            --jq '.id' \
+            /repos/${{ github.repository }}/check-runs)
           echo "checkId=$CHECKID" >> $GITHUB_OUTPUT
 
       - name: 𐂷 Checkout
@@ -77,43 +74,36 @@ jobs:
         run: |
           gh api -X PATCH -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository }}/check-runs
-            --input - <<- EOF
-              {
-                "head_sha": "${{ github.event.pull_request.head.sha }}",
-                "status": "in_progress",
-                "output": {
-                    "title": "Running Visual Regression 🪤"
-                }
-              }
-          EOF
+            -f name='Running Visual Regression 🪤' \
+            -f head_sha='${{ github.event.pull_request.head.sha }}' \
+            -f status='in_progress' \
+            -f 'output[title]=Starting Visual Regression' \
+            -f 'output[summary]=Running Visual Regression 🪤' \
+            -f 'output[text]=More detailed Markdown **text**' \
+            /repos/${{ github.repository }}/check-runs/${{ steps.checkrun.outputs.checkId }}
 
       - name: ⌛️ Running Visual Regression
         id: backstop
         run: cd _ci/backstop && ENV=$DEPLOY_ENV npm run test
 
       - name: Complete Check
+        if: always()
         env:
           RESULT: "${{ steps.backstop.conclusion && '❌' || '✅' }}"
         run: |
-          gh api -X POST -H "Accept: application/vnd.github+json" \
+          gh api -X PATCH -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/${{ github.repository }}/check-runs/${{ github.event.client_payload.checkRunId }} \
-            --input - <<- EOF
-              {
-                "name: "BackstopJS",
-                "head_sha": "${{ github.event.pull_request.head.sha }}",
-                "status": "complete",
-                "output": {
-                    "title": "Visual Regression Complete $RESULT",
-                    "summary": "Here's where we'll list the failed tests."
-                }
-              }
-          EOF
+            -f name='Running Visual Regression 🪤' \
+            -f head_sha='${{ github.event.pull_request.head.sha }}' \
+            -f status='complete' \
+            -f 'output[title]=Visual Regression Complete $RESULT' \
+            -f 'output[summary]=Here's where we'll list the failed tests.' \
+            -f 'output[text]=More detailed Markdown **text**' \
+            /repos/${{ github.repository }}/check-runs/${{ steps.checkrun.outputs.checkId }}
 
-      - name: ❌ Fail
+      - name: "${{ steps.backstop.conclusion && '❌ Failure' || '✅ Success' }}"
         if: failure()
         run: echo 'oh noes! something went horribly wrong.'
 
-      - name: ✅ Success
-        run: echo 'let us continue.'
+      # - name: ✅ Success
+      #   run: echo 'let us continue.'
