--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -48,7 +48,7 @@ jobs:
           echo '- Branch: [${{ env.BRANCH_NAME }}](https://github.com/dgrebb/dgrebb.com/tree/${{ env.BRANCH_NAME }})' >> $GITHUB_STEP_SUMMARY
           if [ "${{ github.event_name }}" = "pull_request" ]; then 
             echo '- Pull Request: [#${{ github.event.number }}](https://github.com/dgrebb/dgrebb.com/pull/${{ github.event.number }}) ${{ github.event.pull_request.title }}' >> $GITHUB_STEP_SUMMARY
-            echo '- ${{ github.event.pull_request.changed_files }} Files Changed: [ ${{ github.event.pull_request.commits }} Commits](${{ github.event.pull_request.commits_url }}) | [Diff](${{ github.event.pull_request.diff_url }})' >> $GITHUB_STEP_SUMMARY
+            echo '- ${{ github.event.pull_request.changed_files }} Files Changed: [ ${{ github.event.pull_request.commits }} Commits](https://github.com/dgrebb/dgrebb.com/pull/${{ github.event.number }}/commits) | [Diff](https://github.com/dgrebb/dgrebb.com/pull/${{ github.event.number }}/files)' >> $GITHUB_STEP_SUMMARY
           fi
           echo '## Release Details' >> $GITHUB_STEP_SUMMARY
           echo '- Release: [${{ env.RELEASE_NAME }}](https://dgrebb.sentry.io/releases/${{ env.RELEASE_NAME }})' >> $GITHUB_STEP_SUMMARY
@@ -56,7 +56,6 @@ jobs:
 
   build_deploy:
     name: 🚜 Build & Deploy ${{ github.ref_name == 'PROD' && 'Production' || 'STG' }}
-    needs: summary
     runs-on: ubuntu-latest
 
     environment:
