--- a/.github/workflows/bd-fe.yml
+++ b/.github/workflows/bd-fe.yml
@@ -1,5 +1,5 @@
 name: 🚜 B&D Front End
-run-name: "${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - ${{ github.event_name == 'pull_request' && format('PR #{0}: {1} to ', github.event.pull_request.number, github.event.pull_request.title) || format('latest `{0}` to ', github.ref_name) }}"
+run-name: "${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - Build ${{ github.event_name == 'pull_request' && format('PR #{0}: {1} to ', github.event.pull_request.number, github.event.pull_request.title) || format('latest `{0}` to ', github.ref_name) }}"
 
 on:
   workflow_dispatch:
