--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -67,6 +67,6 @@ jobs:
         if: always()
         run: |
           cd _ci/backstop
-          FAIL_TABLE=$(./parse-report.sh)
+          FAIL_TABLE=$(./_utils/parse-report.sh)
           echo "#Backstop Summary" >> $GITHUB_STEP_SUMMARY
           echo $FAIL_TABLE >> $GITHUB_STEP_SUMMARY
