--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -3,6 +3,15 @@ run-name: "${{ github.ref_name == 'main' && 'PRD' || 'STG' }} - Test ${{ github.
 
 on:
   workflow_call:
+    secrets:
+      REPORTS_AWS_S3_BUCKET:
+        required: true
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
+      AWS_REGION:
+        required: true
   workflow_dispatch:
   # pull_request:
   #   paths:
