--- a/.github/workflows/test-backstop.yml
+++ b/.github/workflows/test-backstop.yml
@@ -75,7 +75,7 @@ jobs:
         with:
           args: --acl public-read --follow-symlinks --delete --cache-control max-age=2853200,public
         env:
-          AWS_S3_BUCKET: ${{ secrets.REPORTS_AWS_S3_BUCKET }}
+          AWS_S3_BUCKET: ${{ vars.REPORTS_DOMAIN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -84,15 +84,12 @@ jobs:
 
       - name: 🗺️ Summary
         if: always()
-        env:
-          BACKSTOP_URL: ${{ github.ref_name == 'main' && 'http://reports.dgrebb.com/backstop/html_report/gh-prd' || 'http://stg.reports.dgrebb.com/backstop/html_report/gh-stg' }}
-          LIGHTHOUSE_URL: ${{ github.ref_name == 'main' && 'http://reports.dgrebb.com/lighthouse' || 'http://stg.reports.dgrebb.com/lighthouse' }}
         run: |
           cd _ci/backstop
           FAIL_TABLE=$(./_utils/parse-report.sh)
           echo "# Backstop Summary" >> $GITHUB_STEP_SUMMARY
-          echo "<a href=\"$BACKSTOP_URL\">BackstopJS Report</a>" >> $GITHUB_STEP_SUMMARY
-          echo "<a href=\"$LIGHTHOUSE_URL\">Lighthouse Report</a>" >> $GITHUB_STEP_SUMMARY
+          echo "<a href=\"${{ vars.REPORTS_DOMAIN }}/backstop/html_report/gh-stg\">BackstopJS Report</a>" >> $GITHUB_STEP_SUMMARY
+          echo "<a href=\"${{ vars.REPORTS_DOMAIN }}/lighthouse\">Lighthouse Report</a>" >> $GITHUB_STEP_SUMMARY
           echo $FAIL_TABLE >> $GITHUB_STEP_SUMMARY
 
       - name: 🔥 Bummer. Uploading Failed Artifacts!
