--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -27,8 +27,8 @@
     "cors": "^2.8.5",
     "http-server": "^14.1.1",
     "patch-package": "^8.0.0",
+    "playwright": "^1.37.1",
     "pm2": "^5.3.0",
-    "puppeteer": "^20.7.4",
     "super-simple-web-server": "^1.1.4"
   }
 }
