ci(github): adds push to BD&T workflow

--- a/.github/workflows/bdt-fe.yml
+++ b/.github/workflows/bdt-fe.yml
@@ -7,6 +7,10 @@ on:
     paths:
       - "front/**"
     branches: [main, develop]
+  push:
+    paths:
+      - "front/**"
+    branches: [main, develop]
 
 permissions:
   checks: write
